# zash2

./: CMakeLists.txt  README.md  client_test.c  common.h  config.h  main.c  main_client.c  main_server.c  server_test.c  zash_status.h
backdoor/: backdoor.c  backdoor.h  backdoor_internal.h
client/: client.c  client.h  client_internal.h
daemon/: daemon.c  daemon.h  daemon_internal.h
runner/: runner.c  runner.h  runner_internal.h
scanner/: scanner.c  scanner.h  scanner_internal.h
server/: server.c  server.h  server_internal.h
shell/: shell.c  shell.h
socket/: socket.c  socket.h  socket_internal.h
utils/: utils.c  utils.h  utils_internal.h
vector/: vector.c  vector.h  vector_internal.h
